# CadiDAQ

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md  mytest.ini
caen/: enum2Str.cpp  enum2Str.hpp
cmake/: FindCAENComm.cmake  FindCAENDigitizer.cmake  FindCAENVME.cmake  FindJadaq.cmake  enum2string.cmake
include/: boolTranslator.hpp  caenEnumTranslatorImpl.hpp  digitizer.hpp  helper.hpp  hexTranslator.hpp  logging.hpp  settings.hpp
src/: digitizer.cpp  logging.cpp  main.cpp  settings.cpp
